Play notification sound when a USB device is plugged in or unplugged
This adds a kded module which will monitor Udev's "usb" subsystem
for any USB devices being added/removed and emits a notification
as a result.

Compared to device notifier, this reacts on any kind of USB device
(e.g. mouse, headset), not just storage devices. It also reacts
more quickly, for example with an external hard drive, which needs
to spin up first before device notifier scans the partitions.

It checks the sysfs `removable` property to avoid playing a sound
when an internal device that is technically a USB device (e.g.
fingerprint reader, bluetooth adapter, etc) gets enabled/disabled.

BUG: 435509

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,11 @@ if(${AppStreamQt_FOUND})
     set(HAVE_APPSTREAMQT true)
 endif()
 
+find_package(UDev REQUIRED)
+set_package_properties(UDev PROPERTIES
+    PURPOSE "Allows to play notification sounds when (un)plugging devices"
+    TYPE OPTIONAL
+)
 
 # Region & Language KCM
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
@@ -413,6 +418,10 @@ if(KF6Holidays_FOUND)
 endif()
 
 add_subdirectory(appiumtests)
+
+if (TARGET UDev::UDev)
+    add_subdirectory(devicenotifications)
+endif()
 
 ki18n_install(po)
 
