--- a/libdbusmenuqt/CMakeLists.txt
+++ b/libdbusmenuqt/CMakeLists.txt
@@ -27,4 +27,6 @@ target_link_libraries(dbusmenuqt
     Qt::Widgets
 )
 
+set_property(TARGET dbusmenuqt PROPERTY POSITION_INDEPENDENT_CODE ON)
+
 add_subdirectory(test)
