--- a/runners/bookmarks/CMakeLists.txt
+++ b/runners/bookmarks/CMakeLists.txt
@@ -35,6 +35,8 @@ target_link_libraries(krunner_bookmarks_common
     KF5::Bookmarks
 )
 
+set_property(TARGET krunner_bookmarks_common PROPERTY POSITION_INDEPENDENT_CODE ON)
+
 kcoreaddons_add_plugin(krunner_bookmarksrunner SOURCES bookmarksrunner.cpp browserfactory.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
 target_link_libraries(krunner_bookmarksrunner krunner_bookmarks_common)
 
