--- a/runners/services/CMakeLists.txt
+++ b/runners/services/CMakeLists.txt
@@ -21,6 +21,8 @@ target_link_libraries(krunner_services_static
     KF5::Activities
 )
 
+set_property(TARGET krunner_services_static PROPERTY POSITION_INDEPENDENT_CODE ON)
+
 kcoreaddons_add_plugin(krunner_services SOURCES plugin.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
 target_link_libraries(krunner_services
     krunner_services_static
