--- a/startkde/plasmaautostart/CMakeLists.txt
+++ b/startkde/plasmaautostart/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library(PlasmaAutostart STATIC plasmaautostart.cpp)
+set_property(TARGET PlasmaAutostart PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_link_libraries(PlasmaAutostart KF5::CoreAddons KF5::ConfigCore)
