Use pkgconfig to find qalculate

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,12 +75,8 @@ set_package_properties(KF5Baloo PROPERTIES DESCRIPTION "File Searching"
                        TYPE RECOMMENDED
                        PURPOSE "Needed for the File Search runner."
                       )
-find_package(Qalculate 2.0)
-set_package_properties(Qalculate PROPERTIES DESCRIPTION "Qalculate Library"
-                       URL "https://qalculate.github.io/"
-                       TYPE REQUIRED
-                       PURPOSE "Needed for precise computation in the calculator runner."
-                      )
+
+pkg_check_modules(QALCULATE libqalculate>2.0 REQUIRED IMPORTED_TARGET)
 
 find_package(KWinDBusInterface CONFIG REQUIRED)
 
