--- a/runners/calculator/autotests/CMakeLists.txt
+++ b/runners/calculator/autotests/CMakeLists.txt
@@ -1,5 +1,5 @@
 # SPDX-FileCopyrightText: 2021 Alexander Lohnau <alexander.lohnau@gmx.de>
 # SPDX-License-Identifier: BSD-2-Clause
 
-ecm_add_test(calculatorrunnertest.cpp TEST_NAME calculatorrunnertest LINK_LIBRARIES Qt::Test KF5::Runner KF5::KIOCore ${QALCULATE_LIBRARIES})
+ecm_add_test(calculatorrunnertest.cpp TEST_NAME calculatorrunnertest LINK_LIBRARIES Qt::Test KF5::Runner KF5::KIOCore PkgConfig::QALCULATE)
 configure_krunner_test(calculatorrunnertest calculator)
