add a new ShellTest
Add an autotest that instantiates a whole ShellCorona
with this we can test the actual geometries of the desktop and panel views and check they are correct against virtual multiple outputs, even simulating potentially misbehaving screens (non unique edids, connector names changing between times etc)

--- a/shell/CMakeLists.txt
+++ b/shell/CMakeLists.txt
@@ -59,6 +59,8 @@ endif()
 
 kconfig_add_kcfg_files(plasma_shell_SRCS ../kcms/colors/colorssettings.kcfgc GENERATE_MOC)
 
+set(USE_SCRIPTING 1)
+
 add_executable(plasmashell)
 if (QT_MAJOR_VERSION EQUAL "5")
     ecm_add_qtwayland_client_protocol(plasma_shell_SRCS
