--- a/shell/autotests/mockserver/CMakeLists.txt
+++ b/shell/autotests/mockserver/CMakeLists.txt
@@ -9,8 +9,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GLIBCXX_USE_NANOSLEEP" )
 set(SharedClientTest_LIB_SRCS
     corecompositor.cpp corecompositor.h
     coreprotocol.cpp coreprotocol.h
+    datadevice.cpp datadevice.h
     mockcompositor.cpp mockcompositor.h
     xdgoutputv1.cpp xdgoutputv1.h
+    xdgshell.cpp xdgshell.h
     primaryoutput.cpp primaryoutput.h
 )
 
@@ -26,6 +28,10 @@ if (QT_MAJOR_VERSION EQUAL "5")
         BASENAME xdg-output-unstable-v1
     )
 
+    ecm_add_qtwayland_server_protocol(SharedClientTest_LIB_SRCS
+        PROTOCOL ${WaylandProtocols_DATADIR}/stable/xdg-shell/xdg-shell.xml
+        BASENAME xdg-shell
+    )
     ecm_add_qtwayland_client_protocol(SharedClientTest_LIB_SRCS
         PROTOCOL ${PLASMA_WAYLAND_PROTOCOLS_DIR}/kde-primary-output-v1.xml
         BASENAME kde-primary-output-v1
@@ -34,6 +40,7 @@ if (QT_MAJOR_VERSION EQUAL "5")
         PROTOCOL ${PLASMA_WAYLAND_PROTOCOLS_DIR}/kde-primary-output-v1.xml
         BASENAME kde-primary-output-v1
     )
+
 else()
     qt6_generate_wayland_protocol_client_sources(SharedClientTest FILES
         ${PLASMA_WAYLAND_PROTOCOLS_DIR}/kde-primary-output-v1.xml
@@ -41,6 +48,7 @@ else()
     qt6_generate_wayland_protocol_server_sources(SharedClientTest FILES
         ${Wayland_DATADIR}/wayland.xml
         ${WaylandProtocols_DATADIR}/unstable/xdg-output/xdg-output-unstable-v1.xml
+        ${WaylandProtocols_DATADIR}/stable/xdg-shell/xdg-shell.xml
         ${PLASMA_WAYLAND_PROTOCOLS_DIR}/kde-primary-output-v1.xml
     )
 endif()
