--- a/libtaskmanager/autotests/CMakeLists.txt
+++ b/libtaskmanager/autotests/CMakeLists.txt
@@ -3,5 +3,6 @@ include(ECMAddTests)
 ecm_add_tests(
     tasktoolstest.cpp
     launchertasksmodeltest.cpp
-    LINK_LIBRARIES taskmanager Qt::Test KF5::Service KF5::IconThemes KF5::ConfigCore
+    xwindowtasksmodeltest.cpp
+    LINK_LIBRARIES taskmanager Qt::Test KF5::Service KF5::IconThemes KF5::ConfigCore KF5::WindowSystem
 )
