--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(keyboardlayout)
 add_subdirectory(sessionsprivate)
 add_subdirectory(lookandfeelqml)
 add_subdirectory(calendar)
+add_subdirectory(trianglemousefilter)
