--- a/sddm-wayland-session/plasma-wayland.conf
+++ b/sddm-wayland-session/plasma-wayland.conf
@@ -4,4 +4,4 @@ GreeterEnvironment=QT_WAYLAND_SHELL_INTEGRATION=layer-shell
 InputMethod=
 
 [Wayland]
-CompositorCommand=kwin_wayland --no-lockscreen --inputmethod maliit-keyboard
+CompositorCommand=kwin_wayland --no-lockscreen --inputmethod maliit-keyboard --locale1
