wallpapers/image: add basic unit test for frontend
This adds 3 tests for the frontend, each with different fill modes and
background colors.

1. Load image with the default settings
2. Load image with blur enabled and PreserveAspectFit fill mode
3. Load image with Pad fill mode

This uses QQuickItem::grabImage to check the color is coorect in each
test case.

--- a/wallpapers/image/plugin/autotests/CMakeLists.txt
+++ b/wallpapers/image/plugin/autotests/CMakeLists.txt
@@ -48,3 +48,7 @@ add_test(NAME testimagebackend
     -input tst_imagebackend.qml
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
+
+# ImageFrontend test
+ecm_add_test(tst_imagefrontend.cpp TEST_NAME testimagefrontend
+    LINK_LIBRARIES Qt::Qml Qt::QuickTest Qt::Test plasma_wallpaper_imageplugin_static)
