Restart ksmserver after X11 connection is broken
This usually happens after kwin_wayland quits abnormally.

BUG: 449948
FIXED-IN: 5.26.4

--- a/ksmserver/plasma-ksmserver.service.in
+++ b/ksmserver/plasma-ksmserver.service.in
@@ -2,11 +2,13 @@
 Description=KDE Session Management Server
 PartOf=graphical-session.target
 After=plasma-kwin_wayland.service plasma-kcminit.service
+ReloadPropagatedFrom=plasma-kwin_wayland.service
 
 [Service]
 ExecStart=@CMAKE_INSTALL_FULL_BINDIR@/ksmserver
 BusName=org.kde.ksmserver
 Slice=session.slice
+Restart=on-failure
 
 [Install]
 WantedBy=plasma-core.target
