kcms/kfontinst: port font preview area to QML
This adds a custom item to show font previews.

--- a/kcms/kfontinst/viewpart/CMakeLists.txt
+++ b/kcms/kfontinst/viewpart/CMakeLists.txt
@@ -10,6 +10,9 @@ add_library(kfontviewpart MODULE ${kfontviewpart_PART_SRCS})
 
 target_link_libraries(kfontviewpart KF5::Archive KF5::Parts KF5::XmlGui kfontinstui kfontinst )
 
+add_subdirectory(qmlplugin)
+
 install(TARGETS kfontviewpart  DESTINATION ${KDE_INSTALL_PLUGINDIR}/kf${QT_MAJOR_VERSION}/parts )
 
 install( FILES kfontviewpart.rc DESTINATION  ${KDE_INSTALL_KXMLGUIDIR}/kfontview )
+
