Add `StartLimit` to plasma-plasmashell.service.in
`plasmashell` takes around ~4 seconds to start and crash.
Default Systemd limit of 5 times in 10s is too much causing infinite crashing and restarting.

--- a/shell/plasma-plasmashell.service.in
+++ b/shell/plasma-plasmashell.service.in
@@ -2,6 +2,8 @@
 Description=KDE Plasma Workspace
 After=plasma-ksmserver.service plasma-kcminit.service
 PartOf=graphical-session.target
+StartLimitIntervalSec=60s
+StartLimitBurst=3
 
 [Service]
 ExecStart=@CMAKE_INSTALL_FULL_BINDIR@/plasmashell --no-respawn
