Port kio_desktop to ForwardingWorkerBase
I've also taken the liberty to finally rename the kioslave/ dir to kioworkers/

cc @nicolasfella @kossebau

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -374,7 +374,7 @@ add_subdirectory(applets)
 add_subdirectory(dataengines)
 add_subdirectory(wallpapers)
 
-add_subdirectory(kioslave)
+add_subdirectory(kioworkers)
 add_subdirectory(ktimezoned)
 add_subdirectory(menu)
 add_subdirectory(phonon)
