--- a/libtaskmanager/autotests/CMakeLists.txt
+++ b/libtaskmanager/autotests/CMakeLists.txt
@@ -2,6 +2,7 @@ include(ECMAddTests)
 
 ecm_add_tests(
     tasktoolstest.cpp
+    tasksmodeltest.cpp
     launchertasksmodeltest.cpp
     xwindowtasksmodeltest.cpp
     LINK_LIBRARIES taskmanager Qt::Test KF5::Service KF5::IconThemes KF5::ConfigCore KF5::WindowSystem
