wallpapers/image: ctx menu entry for setting desktop/lockscreen wallpaper
When browsing through images and finding a suitable lockscreen
background, its cumbersum to then have to navigate to it once again in
the image picker in settings.

We want to avoid increasing the amount of entries in an already large
context menu, so the lockscreen/desktop/both entries are aggregated
under a "Set as" menu entry.

--- a/wallpapers/image/CMakeLists.txt
+++ b/wallpapers/image/CMakeLists.txt
@@ -11,6 +11,7 @@ target_link_libraries(plasma-apply-wallpaperimage
 )
 
 add_subdirectory(plugin)
+add_subdirectory(wallpaperfileitemactionplugin)
 
 install(TARGETS plasma-apply-wallpaperimage DESTINATION ${KDE_INSTALL_BINDIR})
 
@@ -18,8 +19,5 @@ install(FILES wallpaper.knsrc wallpaper-mobile.knsrc DESTINATION ${KDE_INSTALL_K
 
 plasma_install_package(imagepackage org.kde.image wallpapers wallpaper)
 plasma_install_package(slideshowpackage org.kde.slideshow wallpapers wallpaper)
-
-configure_file(setaswallpaper.desktop.in setaswallpaper.desktop)
-install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/setaswallpaper.desktop DESTINATION ${KDE_INSTALL_DATADIR}/kio/servicemenus)
 
 install(DIRECTORY imagepackage/contents/ui DESTINATION ${PLASMA_DATA_INSTALL_DIR}/wallpapers/org.kde.slideshow/contents PATTERN .svn EXCLUDE PATTERN CMakeLists.txt EXCLUDE PATTERN Messages.sh EXCLUDE)
